tests/cases/errors/runtime_undefined_variable_get.lox
// Reading an undefined global is a runtime error.
// expect runtime error: Undefined variable 'undefined'.
print undefined;
